--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1058,8 +1058,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857;
-  color: #333333;
-  background-color: #fff; }
+  color: #777777;
+  background-color: #333333; }
 
 input,
 button,
@@ -1097,7 +1097,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.42857;
-  background-color: #fff;
+  background-color: #333333;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2058,7 +2058,7 @@ th {
   .table > tbody + tbody {
     border-top: 2px solid #ddd; }
   .table .table {
-    background-color: #fff; }
+    background-color: #333333; }
 
 .table-condensed > thead > tr > th,
 .table-condensed > thead > tr > td,
@@ -2702,7 +2702,7 @@ select[multiple].input-lg,
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #737373; }
+  color: #b7b7b7; }
 
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -3598,7 +3598,7 @@ tbody.collapse.in {
         border-color: #eeeeee #eeeeee #ddd; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
       color: #555555;
-      background-color: #fff;
+      background-color: #333333;
       border: 1px solid #ddd;
       border-bottom-color: transparent;
       cursor: default; }
@@ -3652,7 +3652,7 @@ tbody.collapse.in {
     .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
     .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover,
     .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
-      border-bottom-color: #fff; } }
+      border-bottom-color: #333333; } }
 
 .tab-content > .tab-pane {
   display: none; }
@@ -3947,15 +3947,15 @@ tbody.collapse.in {
       margin-right: 0; } }
 
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7; }
+  background-color: transparent;
+  border-color: transparent; }
   .navbar-default .navbar-brand {
     color: #777; }
     .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
       color: #5e5e5e;
       background-color: transparent; }
   .navbar-default .navbar-text {
-    color: #777; }
+    color: transparent; }
   .navbar-default .navbar-nav > li > a {
     color: #777; }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
@@ -3963,7 +3963,7 @@ tbody.collapse.in {
       background-color: transparent; }
   .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #555;
-    background-color: #e7e7e7; }
+    background-color: transparent; }
   .navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
     color: #ccc;
     background-color: transparent; }
@@ -3975,9 +3975,9 @@ tbody.collapse.in {
       background-color: #888; }
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
-    border-color: #e7e7e7; }
+    border-color: transparent; }
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #e7e7e7;
+    background-color: transparent;
     color: #555; }
   @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -3987,7 +3987,7 @@ tbody.collapse.in {
         background-color: transparent; }
     .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
       color: #555;
-      background-color: #e7e7e7; }
+      background-color: transparent; }
     .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
       color: #ccc;
       background-color: transparent; } }
@@ -4299,7 +4299,7 @@ a.badge:hover, a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #eeeeee; }
+  background-color: transparent; }
   .jumbotron h1,
   .jumbotron .h1 {
     color: inherit; }
@@ -4308,7 +4308,7 @@ a.badge:hover, a.badge:focus {
     font-size: 21px;
     font-weight: 200; }
   .jumbotron > hr {
-    border-top-color: #d5d5d5; }
+    border-top-color: transparent; }
   .container .jumbotron,
   .container-fluid .jumbotron {
     border-radius: 6px; }
@@ -4316,7 +4316,7 @@ a.badge:hover, a.badge:focus {
     max-width: 100%; }
   @media screen and (min-width: 768px) {
     .jumbotron {
-      padding-top: 48px;
+      padding-top: 0;
       padding-bottom: 48px; }
       .container .jumbotron,
       .container-fluid .jumbotron {
@@ -4331,7 +4331,7 @@ a.badge:hover, a.badge:focus {
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857;
-  background-color: #fff;
+  background-color: #333333;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
@@ -4346,7 +4346,7 @@ a.badge:hover, a.badge:focus {
     margin-right: auto; }
   .thumbnail .caption {
     padding: 9px;
-    color: #333333; }
+    color: #777777; }
 
 a.thumbnail:hover,
 a.thumbnail:focus,
@@ -5823,6 +5823,52 @@ button.close {
 
 #header {
   margin-top: 30px; }
+  #header .navbar .navbar-header {
+    background-image: url(/images/header.png);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    text-indent: -9999px; }
+  #header .navbar .navbar-nav {
+    background-image: url(/images/btn_nav_divider.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    width: 102px;
+    height: 18px; }
+    #header .navbar .navbar-nav li {
+      text-indent: -9999px;
+      background-repeat: no-repeat;
+      height: 100%;
+      width: 34px; }
+      #header .navbar .navbar-nav li:first-of-type {
+        background-image: url(/images/btn_nav_about.png);
+        background-position: left top;
+        margin-right: 17px; }
+        #header .navbar .navbar-nav li:first-of-type:hover {
+          background-position: left bottom; }
+      #header .navbar .navbar-nav li:last-of-type {
+        background-image: url(/images/btn_nav_home.png);
+        background-position: right top;
+        margin-left: 17px; }
+        #header .navbar .navbar-nav li:last-of-type:hover {
+          background-position: left bottom; }
+
+section .header {
+  height: 3em;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: auto 100%; }
+
+section.submission {
+  background-image: url(/images/survey_box.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  padding: 2.2em; }
+  section.submission .header {
+    background-image: url(/images/submission_header.png); }
+
+section.results .header {
+  background-image: url(/images/results_header.png); }
 
 #footer {
   margin-top: 30px;
@@ -5830,7 +5876,180 @@ button.close {
   padding-top: 30px;
   color: #777777; }
 
-.gallery-image img {
-  display: block;
-  max-width: 100%;
-  height: auto; }
+/*-----------------------------------------------------------------------------------*/
+/*	14.	Survey Results
+/*-----------------------------------------------------------------------------------*/
+.result_container {
+  width: 575px;
+  height: 300px;
+  padding-top: 10px; }
+
+.result_header {
+  height: 50px;
+  background-image: url(/images/blog_rule.png);
+  background-repeat: repeat-x;
+  padding-bottom: 20px; }
+
+.result_name {
+  display: inline-block;
+  background-color: #333;
+  color: #FFF;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  font-weight: lighter;
+  padding-top: .2em;
+  padding-right: 10px; }
+
+.result_anchor {
+  color: #FFF;
+  font-family: sans-serif;
+  font-size: 24px;
+  text-decoration: none; }
+
+.result_social {
+  float: right;
+  background-color: #333;
+  height: 16px;
+  display: inline-block;
+  color: #fff;
+  /* 	padding-left: 10px; */ }
+
+.result_location {
+  clear: both;
+  padding-top: .2em;
+  background-color: #333;
+  color: #fff; }
+
+.result_answers {
+  width: 100%;
+  background-color: #333;
+  color: #fff; }
+
+.result_answers ul li {
+  list-style-type: none; }
+
+.result_comments {
+  float: left;
+  width: 50px;
+  background-color: #333;
+  color: #fff;
+  padding-left: 20px; }
+
+.cmntcnt {
+  color: #555; }
+
+/*-----------------------------------------------------------------------------------*/
+/*	15.Sprites
+/*-----------------------------------------------------------------------------------*/
+#nav {
+  width: 103px;
+  height: 18px;
+  background: url("/images/btn_about_home.png") top left;
+  margin: 10px auto;
+  padding: 0;
+  position: relative; }
+
+#nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  top: 0; }
+
+#nav li, #nav a {
+  height: 18px;
+  display: block; }
+
+#abt {
+  left: 0px;
+  width: 35px; }
+
+#hme {
+  left: 35px;
+  width: 35px; }
+
+#abt a:hover {
+  background: transparent url(images/btn_about_home.png) 0px -18px no-repeat; }
+
+#hme a:hover {
+  background: transparent url(images/btn_about_home.png)-70px-18px no-repeat; }
+
+#submit {
+  width: 51px;
+  height: 26px;
+  background: url(image/btn_submit.png) top left no-repeat;
+  margin: 10px auto;
+  padding: 0;
+  position: relative; }
+
+#submit li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  top: 0; }
+
+#submit li, .submit a {
+  height: 26px;
+  display: block; }
+
+#submbtn {
+  left: 0px;
+  width: 51px; }
+
+#submbtn a:hover {
+  background: transparent url(images/btn_submit.png) 0px -29px no-repeat; }
+
+.cmmnt {
+  width: 116px;
+  height: 29px;
+  background: url("images/comment_btn.png") top left no-repeat;
+  margin: 10px auto;
+  padding: 0;
+  position: relative; }
+
+.cmmnt li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  top: 0; }
+
+.cmmnt li, .cmmnt a {
+  height: 29px;
+  display: block; }
+
+.cmntbtn {
+  left: 0px;
+  width: 116px; }
+
+.cmntbtn a:hover {
+  background: transparent url("images/comment_btn.png") 1px -29px no-repeat; }
+
+.sclnav {
+  width: 80px;
+  height: 16px;
+  margin: 10px auto;
+  padding: 0;
+  position: relative; }
+
+.sclnav li {
+  display: inline-block;
+  width: 22px;
+  height: 16px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background: url("/images/social.png") no-repeat; }
+  .sclnav li.twit {
+    background-position: 0px 0px; }
+  .sclnav li.fcbk {
+    background-position: -30px 0px; }
+  .sclnav li.plus {
+    background-position: -60px 0px; }
+  .sclnav li.twit:hover {
+    background-position: 0px -16px; }
+  .sclnav li.fcbk:hover {
+    background-position: -30px -16px; }
+  .sclnav li.plus:hover {
+    background-position: -60px -16px; }
