--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -127,10 +127,15 @@ section{
 
 .result_comments {
 	float: left;
-	width: 50px;
+	background: url('/images/btn_comment.png');
+	width: 114px;
+	height: 26px;
 	background-color: #333;
 	color: #fff;
 	padding-left: 20px;
+	&:hover{
+		background-position: 0 -29px;
+	}
 }
 
 .cmntcnt{
