--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -43,7 +43,7 @@ mixin submission(submission)
 						a(href="#2")
 					li.plus 
 						a(href="#3")
-				a.btn.btn-primary.btn-lg(href="#myModal", data-toggle="modal") &plus;
+				a.result_comments(href="#myModal", data-toggle="modal") &plus;
 				p.comment-count comments:1
 		div.result_location #{submission.location}
 		div.result_answers
