--- a/public/styles/bootstrap/bootstrap/_variables.scss
+++ b/public/styles/bootstrap/bootstrap/_variables.scss
@@ -29,7 +29,7 @@ $brand-danger:          #d9534f !default;
 //** Background color for `<body>`.
 $body-bg:               $gray-dark !default;
 //** Global text color on `<body>`.
-$text-color:            $gray-light !default;
+$text-color:            #fff !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
