--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -3,38 +3,54 @@ mixin submission-form(action)
 		input(type='hidden', name='action', value='submission.create')
 		.media
 			.media-body
-				label Name
+				label 
+					| Name
 				input(name='name', type='text' placeholder='We can be on a first name basis.' style="margin-bottom: 10px; resize: vertical;").form-control
-				p Is this your real name?				
+				p 
+					| Is this your real name?				
 				input(type="radio", name="realName", value="1" ).form-control
-				label Yes
+				label 
+					| Yes
 				input(type="radio", name="realName", value="0" ).form-control
-				label No
-				label Where
+				label 
+					| No
+				label 
+					| Where
 				input(name='location', type='text' placeholder='City, State, Country' style="margin-bottom: 10px; resize: vertical;").form-control
-				label Age
+				label 
+					| Age
 				input(name='age', type='text' placeholder='Age' style="margin-bottom: 10px; resize: vertical;").form-control
-				label Email
+				label 
+					| Email
 				input(name='email', type='text' placeholder='Just in case I have questions' style="margin-bottom: 10px; resize: vertical;").form-control
-				p Your five things...
-				label 1
+				p 
+					| Your five things...
+				label 
+					| 1
 				input(name='thing1', type='text' placeholder='1?' style="margin-bottom: 10px; resize: vertical;").form-control
-				label 2
+				label 
+					| 2
 				input(name='thing2', type='text' placeholder='2?' style="margin-bottom: 10px; resize: vertical;").form-control
-				label 3
+				label 
+					| 3
 				input(name='thing3', type='text' placeholder='3?' style="margin-bottom: 10px; resize: vertical;").form-control
-				label 4
+				label 
+					| 4
 				input(name='thing4', type='text' placeholder='4?' style="margin-bottom: 10px; resize: vertical;").form-control
-				label 5
+				label 
+					| 5
 				input(name='thing5', type='text' placeholder='5?' style="margin-bottom: 10px; resize: vertical;").form-control
 
-				button(type='submit').btn.btn-primary Post Submission
+				button(type='submit').btn.btn-primary 
+					| Post Submission
 				
 
-mixin submission(submission)
+mixin submission(submission, comments)
 	div.result
+		if data
 		div.result_header
-			div.result_name #{submission.name}, #{submission.age}
+			div.result_name 
+				| #{submission.name}, #{submission.age}
 			div.result_social
 				ul.sclnav
 					li.twit 
@@ -43,13 +59,19 @@ mixin submission(submission)
 						a(href="#2")
 					li.plus 
 						a(href="#3")
-				a.result_comments(href="#myModal", data-toggle="modal") &plus;
-				p.comment-count comments:1
+				a.result_leave_comment(href="#myModal", data-toggle="modal" data-submission="#{submission.id}")
+				p.comment-count 
+				| comments: #{comments}
 		div.result_location #{submission.location}
 		div.result_answers
 			ul
-				li 1. #{submission.thing1}
-				li 2. #{submission.thing2}
-				li 3. #{submission.thing3}
-				li 4. #{submission.thing4}
-				li 5. #{submission.thing5}
+				li 
+					| 1. #{submission.thing1}
+				li 
+					| 2. #{submission.thing2}
+				li 
+					| 3. #{submission.thing3}
+				li 
+					| 4. #{submission.thing4}
+				li 
+					| 5. #{submission.thing5}
