--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -11,7 +11,8 @@ block content
 		.container: .row
 			section.col-xs-12.col-sm-5.col-md-5.submission
 				.header
-				p Please tell me five things about yourself thatyou like. I can't time you, but I'd prefer if youdid this in under a minute. Life is busy.
+				p 
+					| Please tell me five things about yourself thatyou like. I can't time you, but I'd prefer if youdid this in under a minute. Life is busy.
 				+submission-form()
 			section.col-xs-12.col-sm-6.col-md-6.col-sm-offset-1.results
 				.header
@@ -27,7 +28,11 @@ block content
 					else
 						h4.text-weight-normal Showing #{utils.plural(data.submissions.results.length, '* submission')}.
 				each submission in data.submissions.results
-					+submission(submission)
+					- var cmntCnt = 0;
+					each comment in data.comments
+						- if(comment.submission == submission.id)
+							- cmntCnt += 1;
+					+submission(submission, cmntCnt)
 							
 				if data.submissions.totalPages > 1
 					ul.pagination
@@ -42,7 +47,7 @@ block content
 							li: a(href='?page=' + data.submissions.next): span.glyphicon.glyphicon-chevron-right
 						else
 							li.disabled: a(href='?page=' + data.submissions.totalPages): span.entypo.glyphicon.glyphicon-chevron-right
-	+comment-modal()				
+	+comment-modal()
 
 block js
 	script.
@@ -52,6 +57,17 @@ block js
 			var input = $('.comment-field-input');
 			var submit = comments.find('button[type=submit]');
 
+			var commentBtn = $('.result_leave_comment');
+			var commentForm = $('#commentForm');
+
+			commentBtn.click(function(){
+				var subId = $(this).data('submission');
+				$('<input>').attr({
+				    type: 'hidden',
+				    value: subId,
+				    name: 'submission'
+				}).appendTo(commentForm);
+			});
 			
 			// Scroll to comments and focus input field
 			function scrollToComments(e) {
