--- a/public/styles/bootstrap/bootstrap/_forms.scss
+++ b/public/styles/bootstrap/bootstrap/_forms.scss
@@ -112,8 +112,7 @@ output {
 // input[type="color"]
 
 .form-control {
-  display: block;
-  width: 100%;
+  display: inline-block;
   height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
   padding: $padding-base-vertical $padding-base-horizontal;
   font-size: $font-size-base;
