--- a/public/styles/bootstrap/bootstrap/_forms.scss
+++ b/public/styles/bootstrap/bootstrap/_forms.scss
@@ -111,12 +111,20 @@ output {
 // input[type="tel"]
 // input[type="color"]
 
-.form-control {
+@mixin form-base{
   display: inline-block;
   height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
   padding: $padding-base-vertical $padding-base-horizontal;
   font-size: $font-size-base;
   line-height: $line-height-base;
+}
+
+.form-label {
+  @include form-base;
+}
+
+.form-control {
+  @include form-base;
   color: $input-color;
   background-color: $input-bg;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
