--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1,4 +1,3 @@
-
 #header {
 	margin-top: 30px;
 	.navbar{
@@ -50,11 +49,23 @@ section{
 		padding: 2.2em;
 		.header{background-image: url(/images/submission_header.png);}
 		form{
+			p{
+				height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+				padding: $padding-base-vertical $padding-base-horizontal;
+				font-size: $font-size-base;
+				font-weight: bold;
+				line-height: $line-height-base;
+				&:first-of-type{display: inline-block;}
+				&:last-of-type{clear:both;}
+			}
 			p:first-of-type{display: inline-block;}
 			p:last-of-type{clear:both;}
 			input[type=text]{
 				margin-bottom: 10px;
 				resize: vertical;
+			}
+			input[type=radio]{
+				height: 14px;
 			}
 		}
 	}
