--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -3,52 +3,52 @@ mixin submission-form(action)
 		input(type='hidden', name='action', value='submission.create')
 		.media
 			.media-body
-				label(for='name' class="col-sm-2")
+				label(for='name' class="col-sm-2").form-label
 					| Name
 				input(name='name' type='text' class="col-sm-10" placeholder='We can be on a first name basis.').form-control
 				br
 				p 
 					| Is this your real name?
-				label(for='Yes')
+				label(for='Yes').form-label
 					| Yes				
 				input(type="radio" name="realName" value="1" ).form-control
-				label(for='no')
+				label(for='no').form-label
 					| No
 				input(type="radio" name="realName" value="0" ).form-control
 				br
-				label(for='location' class="col-sm-2")
+				label(for='location' class="col-sm-2").form-label
 					| Where
 				input(name='location' type='text' class="col-sm-10" placeholder='City, State, Country').form-control
 				br
-				label(for='age' class="col-sm-2")
+				label(for='age' class="col-sm-2").form-label
 					| Age
 				input(name='age' type='text' class="col-sm-10" placeholder='Age').form-control
 				br
-				label(for='email' class="col-sm-2")
+				label(for='email' class="col-sm-2").form-label
 					| Email
 				input(name='email' type='text' class="col-sm-10" placeholder='Just in case I have questions').form-control
 				br
 				p 
 					| Your five things...
-				label(for='thing1' class="col-sm-2" )
+				label(for='thing1' class="col-sm-2" ).form-label
 					| 1
-				input(name='thing1' type='text' class="col-sm-10" placeholder='1?').form-control
+				input(name='thing1' type='text' class="col-sm-10").form-control
 				br
-				label(for='thing2' class="col-sm-2")
+				label(for='thing2' class="col-sm-2").form-label
 					| 2
-				input(name='thing2' type='text' class="col-sm-10" placeholder='2?').form-control
+				input(name='thing2' type='text' class="col-sm-10").form-control
 				br
-				label(for='thing3' class="col-sm-2")
+				label(for='thing3' class="col-sm-2").form-label
 					| 3
-				input(name='thing3' type='text' class="col-sm-10" placeholder='3?').form-control
+				input(name='thing3' type='text' class="col-sm-10").form-control
 				br
-				label(for='thing4' class="col-sm-2")
+				label(for='thing4' class="col-sm-2").form-label
 					| 4
-				input(name='thing4' type='text' class="col-sm-10" placeholder='4?').form-control
+				input(name='thing4' type='text' class="col-sm-10").form-control
 				br
-				label(for='thing5' class="col-sm-2")
+				label(for='thing5' class="col-sm-2").form-label
 					| 5
-				input(name='thing5' type='text' class="col-sm-10" placeholder='5?').form-control
+				input(name='thing5' type='text' class="col-sm-10").form-control
 br
 
 				button(type='submit').btn.btn-primary 
@@ -61,7 +61,7 @@ mixin submission(submission, comments)
 		div.result_header
 			div.result_name 
 				| #{submission.name}, #{submission.age}
-			div.result_social
+			div.result_social.col-sm-3.pull-right
 				ul.sclnav
 					li.twit 
 						a(href="#1")
