--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -10,7 +10,7 @@ html
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
 
 		title= title || '5Things'
-		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
+		link(rel="shortcut icon", href="/FiveThings.ico?v=2", type="image/x-icon")
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.sass
 		link(href="/styles/site.css", rel="stylesheet")
